fix(tests): Fix test with maven and Junit5
 - Fix TestScene and TestPhysicEngineScene about onKeyReleased new event
 - Fix Junit5 test detection with JDK18